fix: Fix layout issues on the modal body

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -548,7 +548,7 @@ html {
 
 .modal-body img {
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 50%;
@@ -926,6 +926,10 @@ html {
 
   .projects-item .projects-item_description[data-first-description] {
     margin-top: 0vh;
+  }
+
+  .modal-body img {
+    top: 45%;
   }
 }
 
